# Robotic-medical-AI-assistant

./: .gitignore  README.md  index.html
docker/: Dockerfile.api  zgx_ai_api.py
hf-space/: README.md  deploy_to_hf.sh  index.html  pyproject.toml  style.css
hf-space/consent_agent_reachy/: main.py
scripts/: start_reachy_app.sh  start_services.sh
