[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "consent_agent_reachy"
version = "0.2.0"
description = "Always-listening voice agent for Reachy Mini using local Whisper + vLLM + Piper on ZGX Nano"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"

dependencies = [
    "reachy-mini",
    "requests>=2.28.0",
    "numpy>=1.24.0",
]

[project.entry-points."reachy_mini_apps"]
consent_agent_reachy = "consent_agent_reachy.main:ConsentAgentReachy"